# flwr-frl-kit

./: .gitattributes  .gitignore  .vercelignore  README.md  client_entry.py  package.json  pyproject.toml  requirements.txt  run_local.sh  test_client.py  test_server.py  vercel.json
apps/frontend/: .nixpacksignore  next.config.ts  nixpacks.toml  package-lock.json  package.json  railway.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/: copy-button.tsx  demo-gif.tsx  discord-fab.tsx  framework-carousel.tsx  globe-section.tsx  scroll-reveal.tsx
apps/home/g/Downloads/flwr-frl-kit/apps/frontend/: package.json  server.js
apps/home/g/Downloads/flwr-frl-kit/apps/frontend/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json
apps/home/g/Downloads/flwr-frl-kit/apps/frontend/.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json
apps/home/g/Downloads/flwr-frl-kit/apps/frontend/.next/server/app/: _not-found.rsc  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
apps/home/g/Downloads/flwr-frl-kit/apps/frontend/.next/server/app/_not-found/: page.js  page.js.nft.json  page_client-reference-manifest.js
apps/home/g/Downloads/flwr-frl-kit/apps/frontend/.next/server/app/favicon.ico/: route.js  route.js.nft.json
apps/home/g/Downloads/flwr-frl-kit/apps/frontend/.next/server/chunks/: 447.js
apps/home/g/Downloads/flwr-frl-kit/apps/frontend/.next/server/pages/: 404.html  500.html
apps/orchestrator/: pyproject.toml  server.py  strategy_rl.py
media/: README.md  gen_emoji.py  generate_cartpole_gif.py  generate_tree_emojis.py  generate_weight_overlay_gif.py  requirements.txt  weight_overlay_animation.py  weight_overlay_animation_complex.py
media/Tex/: 10a1a3b8a81c5844.tex  e10aa6273c061fef.tex  e592892c5108408a.tex
media/media/videos/weight_overlay_animation/1080p60/partial_movie_files/WeightOverlayAnimation/: partial_movie_file_list.txt
media/videos/weight_overlay_animation/1080p60/partial_movie_files/WeightOverlayAnimation/: partial_movie_file_list.txt
media/videos/weight_overlay_animation/480p15/partial_movie_files/WeightOverlayAnimation/: partial_movie_file_list.txt
media/videos/weight_overlay_animation_complex/1080p60/partial_movie_files/WeightOverlayAnimation/: partial_movie_file_list.txt
media/videos/weight_overlay_animation_complex/480p10/partial_movie_files/WeightOverlayAnimation/: partial_movie_file_list.txt
scripts/: check_ready.sh  client_app.py  generate_cartpole_gif.py  server_app.py  train_local.py  weight_overlay_animation.py
scripts/media/videos/weight_overlay_animation/480p20/partial_movie_files/WeightOverlayAnimation/: partial_movie_file_list.txt
scripts/media/videos/weight_overlay_animation/720p30/partial_movie_files/WeightOverlayAnimation/: partial_movie_file_list.txt
