[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flwr-frl-orchestrator"
version = "0.1.0"
description = "Flower federated learning server for reinforcement learning"
authors = [
    {name = "FRL Kit Team"},
]
dependencies = [
    "flwr>=1.5.0",
    "torch>=2.0.0",
    "numpy>=1.20.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
]

[project.scripts]
flwr-server = "apps.orchestrator.server:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true